Fix sidebar width and z-index

--- a/components/NavBar.scss
+++ b/components/NavBar.scss
@@ -145,6 +145,6 @@
     padding-bottom: 1rem;
     position: fixed;
     background-color: #fff;
-    z-index: 1;
+    z-index: 2;
   }
 }
